# Tfit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Docker/: Dockerfile  Tfit
Documentation/: Doxyfile  documentation.aux  documentation.tex  documentation.toc  newquickstart.tex  quickstart.aux  quickstart.tex  usagestatement.aux  usagestatement.tex
Documentation/codebase/html/: _b_i_c_8cpp.html  _b_i_c_8cpp.js  _b_i_c_8cpp__incl.map  _b_i_c_8cpp__incl.md5  _b_i_c_8cpp_source.html  _b_i_c_8h.html  _b_i_c_8h.js  _b_i_c_8h__dep__incl.map  _b_i_c_8h__dep__incl.md5  _b_i_c_8h_source.html  _f_d_r_8cpp.html  _f_d_r_8cpp.js  _f_d_r_8cpp__incl.map  _f_d_r_8cpp__incl.md5  _f_d_r_8cpp_source.html  _f_d_r_8h.html  _f_d_r_8h.js  _f_d_r_8h__dep__incl.map  _f_d_r_8h__dep__incl.md5  _f_d_r_8h__incl.map  _f_d_r_8h__incl.md5  _f_d_r_8h_source.html  _m_p_i__comm_8cpp.html  _m_p_i__comm_8cpp__incl.map  _m_p_i__comm_8cpp__incl.md5  _m_p_i__comm_8cpp_source.html  _m_p_i__comm_8h.html  _m_p_i__comm_8h.js  _m_p_i__comm_8h__dep__incl.map  _m_p_i__comm_8h__dep__incl.md5  _m_p_i__comm_8h__incl.map  _m_p_i__comm_8h__incl.md5  _m_p_i__comm_8h_source.html  _param_wrapper_8cpp.html  _param_wrapper_8cpp.js  _param_wrapper_8cpp__incl.map  _param_wrapper_8cpp__incl.md5  _param_wrapper_8cpp_source.html  _param_wrapper_8hpp.html  _param_wrapper_8hpp__dep__incl.map  (+337 more)
Documentation/codebase/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  files_8.js  (+46 more)
annotation_files/: GrCG38_TSS_liftOver.bed  hg38_TSS.bed
config_files/: config_file.txt
docs/: CONVENTIONS  doxyfile.in  notes
docs/manual/: EMalg.mp  Makefile  datahandling.mp  datahandling2.mp  models.mp  notes.aux  notes.out  notes.tex  notes.toc  userguide.tex
python3_src/: README.md  README.txt  bootrapping.py  check_moment_estimators.py  display__iterates.py  find_regions_of_interest.py  func_test.py  func_test3.py  iterates.tsv  load.py  main.py  make_interval_files.py  make_noise_region_file.py  make_test_file.py  model.py  model_across.py  node.py  parse_argv.py  simulate.py  template_window_matching.py  test_new_l_fit.py  unstranded_model.py  updates
python3_src/transition_docs/: simulatepy2results.txt  simulatepy3results.txt  updates  updates.txt
python_src/: func_test2.py  load.py  main.py  simulate.py  template_window_matching.py
src/: .ParamWrapper.cpp.kate-swp  .clang-format  BIC.cpp  BIC.h  Bed.cpp  Bed.h  Bedfile.cpp  Bedfile.h  Data.cpp  Data.h  Distro.cpp  Distro.h  Distros.cpp  Distros.h  EMGParams.cpp  EMGParams.h  EMalg.cpp  EMalg.h  EMseeds.cpp  EMseeds.h  FDR.cpp  FDR.h  GenerateReads.cpp  GenerateReads.h  ID  ITree.cpp  ITree.h  Intervals.cpp  Intervals.h  MPI_comm.cpp  MPI_comm.h  MainTesting.cpp  Makefile  Model.cpp  Model.h  ModelParamSet.cpp  ModelParamSet.h  ModelSets.cpp  ModelSets.h  ModelSupport.cpp  (+56 more)
test/: CMakeLists.txt  NOTES  TORUN  cntRegions.pl  runTest.sh  singleregion.bed  testmodel-1_K_models_MLE.tsv  testmodel-1_bidir_predictions.bed
test/examples/: SR_repro.bed  multiple.bed  multiple.bed12  multiple.bed6  multiple.nocomments.bed  multiple_repro.bed  reduced.bg  singleregion.bed  testNested.K-models.tsv  typical_region.bg
test/src/: EMG-2_bidir_predictions.bed  Itest_DataIO.cpp  Itest_loadBedGraph.cpp  explore_coreEM.cpp  new.tm.out  reproduce_BidirPDFs.cpp  reproduce_Bidirectional.cpp  reproduce_EMcomponents.cpp  reproduce_Nested.cpp  reproduce_assortment.cpp  reproduce_loadBedGraph.cpp  reproduce_segment.cpp  reproduce_templatematching.cpp  template  test_Bed.cpp  test_Bedfile.cpp  test_Bidirectional.cpp  test_Bimap.cpp  test_Data.cpp  test_Distros.cpp  test_EMGparameters.cpp  test_EMGparams.cpp  test_EMalg.cpp  test_EMseeds.cpp  test_ITree.cpp  test_Intervals.cpp  test_ModelParamSet.cpp  test_ModelSets.cpp  test_ModelSupport.cpp  test_Models.cpp  test_Nested.cpp  test_Random.cpp  test_Regions.cpp  test_SetEMGparam.cpp  test_SetROI.cpp  test_coreEM.cpp  test_dInterval.cpp  test_gInterval.cpp  test_helper.cpp  test_loadBedGraph.cpp  (+3 more)
